src/Frontend/src/components/flashcards/Flashcards/flashcards.less
@import "./../../../variables";

@modalMaxWidth: @maxPhoneWidth;
@modalMaxHeight: 504px;
@moveAnimationDuration: 0.7s;
@textAppearAnimationDuration: 0.3s;
@modalBackgroundColor: #fff;
@modalZIndex: 10;
@overlayZIndex: @flashcardsOverlayZIndex;
@progressBarHeight: 30px;

.overlay {
  position: fixed;
  z-index: @overlayZIndex;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;

  animation: appear 250ms;

  background-color: rgba(51, 51, 51, 0.8);
}

.overflow {
  overflow: hidden;
}

@keyframes appear {
  from {
    opacity: 0;
  }
  to {
    opacity: 1.0;
  }
}

.modal {
  width: @modalMaxWidth;
  height: @modalMaxHeight;
  max-width: 100%;
  max-height: 100%;

  display: flex;

  position: absolute;
  top: 24%;
  left: 50%;
  z-index: @modalZIndex;
  transform: translate(-50%, 0);

  background-color: @modalBackgroundColor;
  padding: 37px 57px 48px;
  border-radius: 10px;
  margin-top: -30px;
}

.secondModal {
  transform: translate(-50%, -6%) scale(0.95);
  z-index: @modalZIndex - 1;
  background: darken(@modalBackgroundColor, 10%);

  &.move {
    animation-duration: @moveAnimationDuration;
    animation-name: moveFromSecondToFirst;
  }
}

@keyframes moveFromSecondToFirst {
  from {
    transform: translate(-50%, -6%) scale(0.95);
    z-index: @modalZIndex - 1;
    background: darken(@modalBackgroundColor, 10%);
  }
  to {
    z-index: @modalZIndex;
    transform: translate(-50%, 0);
    background: @modalBackgroundColor;
  }
}

.thirdModal {
  transform: translate(-50%, -12%) scale(0.90);
  z-index: @modalZIndex - 2;
  background: darken(@modalBackgroundColor, 15%);

  &.move {
    animation-duration: @moveAnimationDuration;
    animation-name: moveFromThirdToSecond;
  }
}

@keyframes moveFromThirdToSecond {
  from {
    transform: translate(-50%, -12%) scale(0.90);
    z-index: @modalZIndex - 2;
    background: darken(@modalBackgroundColor, 15%);
  }
  to {
    transform: translate(-50%, -6%) scale(0.95);
    z-index: @modalZIndex - 1;
    background: darken(@modalBackgroundColor, 10%);
  }
}

.fourthModal {
  transform: translate(-50%, -18%) scale(0.85);
  z-index: @modalZIndex - 3;
  background: darken(@modalBackgroundColor, 18%);

  &.move {
    animation-duration: @moveAnimationDuration;
    animation-name: moveFromFourthToThird;
  }
}

@keyframes moveFromFourthToThird {
  from {
    transform: translate(-50%, -18%) scale(0.85);
    z-index: @modalZIndex - 3;
    background: darken(@modalBackgroundColor, 18%);
  }
  to {
    transform: translate(-50%, -12%) scale(0.90);
    z-index: @modalZIndex - 2;
    background: darken(@modalBackgroundColor, 15%);
  }
}

.controlGuideContainer {
  width: 100%;

  position: absolute;
  top: 50%;
  transform: translate(0, @modalMaxHeight/2 + 10px);

  margin: 0;

  color: @lightYellow;
  text-align: center;
  font-size: 14px;
  line-height: 1.2;
  font-weight: lighter;

  & > span {
    padding: 3px 9px;
    margin: 5px;
    border-radius: 2px;
    box-sizing: border-box;

    background: rgba(0, 0, 0, 0.5);
    border: 1px solid @lightYellow;
    text-transform: uppercase;
  }
}

.progressBarContainer {
  position: absolute;
  height: @progressBarHeight;
  bottom: 0;
  width: 100%;
}

@media (max-width: @minLaptopWidth) {
  .modal {
    width: 100vw;
    max-width: 100vw;
    height: calc(100vh - @headerHeight - @progressBarHeight);
    top: 0;
    transform: translate(-50%, @headerHeight + @progressBarHeight);
    padding: 26px 10px;
    border-radius: 0;
  }

  .overlay {
    z-index: @overlayZIndex - 2;
  }

  .secondModal {
    transform: translate(-50%, @headerHeight + @progressBarHeight) scale(0.95);
  }

  .thirdModal {
    display: none;
  }

  .fourthModal {
    display: none;
  }

  .controlGuideContainer {
    display: none;
  }

  @keyframes moveFromSecondToFirst {
    from {
      transform: translate(-50%, @headerHeight + @progressBarHeight) scale(0.95);
      z-index: @modalZIndex - 1;
      background: darken(@modalBackgroundColor, 10%);
    }
    to {
      transform: translate(-50%, @headerHeight + @progressBarHeight);
      z-index: @modalZIndex;
      background: @modalBackgroundColor;
    }
  }
}

